--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,6 @@ AC_ADD_SCRIPT("${CMAKE_CURRENT_LIST_DIR}/src/reward_system.cpp")
 
 AC_ADD_SCRIPT_LOADER("RewardSystem"      "${CMAKE_CURRENT_LIST_DIR}/src/loader.h")
 
-CU_ADD_HOOK(AFTER_WORLDSERVER_CMAKE "${CMAKE_CURRENT_LIST_DIR}/src/cmake/after_ws_install.cmake")
+AC_ADD_CONFIG_FILE("${CMAKE_CURRENT_LIST_DIR}/conf/reward_system.conf.dist")
 
 message("-- REWARD SYSTEM CONFIGURED --")
