--- a/conf/reward_system.conf.dist
+++ b/conf/reward_system.conf.dist
@@ -5,7 +5,7 @@
 #        Description: Announce the reward system
 #        Default:     1  - (Enabled)
 # 
-RewardSystem.Announce = 1
+RewardSystem.Announce = 0
 
 #
 #    RewardSystemEnable
@@ -16,14 +16,14 @@ RewardSystemEnable = 1
 
 #
 #    RewardTime
-#        Description: Time in hours to reward the player
+#        Description: Time in minutes to reward the player
 #        Default:     1  - (Enabled)
 #                     
-RewardTime = 1
+RewardTime = 30
 
 #
 #    MaxRoll
-#        Description: Max roll the player will do
-#        Default:     1000  - (Enabled)
+#        Description: Max roll the player will do, if the roll matches an item in the reward table it will reward it.
+#        Default:     1  - (Enabled)
 #                     
-MaxRoll = 1000
+MaxRoll = 1
